# raylibstarter-minimal

./: LICENSE  Readme.md  Test Test
.github/workflows/: cmake.yml
cmake/: raylib.cmake
src/: CMakeLists.txt  main.cpp
